update second commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/portfolio.css">
-        <link rel="stylesheet" href="./css/portfoly.css">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/styles.css">
+        
     </head>
     <body>
         <!--Шапка сайту-->
@@ -19,10 +19,9 @@
                     <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
                     <li><a href="" class="link">Контакти</a></li>
                 </ul>
-    
-                <ul class="site-nav-contacts">
-                    <li><a href="mailto:info@devstudio" class="mail-link">info@devstudio</a></li>
-                    <li><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+                <ul class="contacts list">
+                    <li><a class="contact link" href="mailto:info@devstudio">info@devstudio</a></li>
+                    <li><a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,7 +31,7 @@
             <section class="projects">
                 <h1>Наші проекти</h1>
                 <ul>
-                    <li><button class="filter primary" type="button">Усі</button></li>
+                    <li><button class="filter" type="button">Усі</button></li>
                     <li><button class="filter" type="button">Веб-сайт</button></li>
                     <li><button class="filter" type="button">Додатки</button></li>
                     <li><button class="filter" type="button">Дизайн</button></li>
@@ -92,10 +91,10 @@
         </main>
 
         <!--Футер-->
-        <footer>
-            <a class="logo-link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+        <footer class="footer">
+            <a class="logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
             <address>
-                <ul>
+                <ul class="contacts">
                     <li><a href="https://goo.gl/maps/xUyhkgXyXuYnwauUA" class="address">м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li><a href="mailto:info@devstudio" class="mail">info@devstudio</a></li>
                     <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
