--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/portfolio.css">
         <link rel="stylesheet" href="./css/styles.css">
+        
     </head>
     <body>
         <!--Шапка сайту-->
@@ -20,9 +20,9 @@
                     <li><a href="" class="link">Контакти</a></li>
                 </ul>
     
-                <ul class="site-nav-contacts">
-                    <li><a href="mailto:info@devstudio" class="mail-link">info@devstudio</a></li>
-                    <li><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+                <ul class="contacts list">
+                    <li><a class="contact link" href="mailto:info@devstudio">info@devstudio</a></li>
+                    <li><a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </nav>
         </header>
@@ -31,7 +31,7 @@
             <!--Пропозиції-->
             <section class="propositions">
                 <h1 class="propositions-title">Ефективні рішення для <br> вашого бізнесу</h1>
-                <a href="" class="button primary">Замовити послугу</a> 
+                <button class="button primary" type="button">Замовити послугу</button>
             </section>
 
             <!--Особливості-->
@@ -114,10 +114,10 @@
         </main>
 
         <!--Футер-->
-        <footer>
-            <a class="logo-link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+        <footer class="footer">
+            <a class="logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
             <address>
-                <ul>
+                <ul class="contacts">
                     <li><a href="https://goo.gl/maps/xUyhkgXyXuYnwauUA" class="address">м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li><a href="mailto:info@devstudio" class="mail">info@devstudio</a></li>
                     <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
